force-app/main/default/objects/Domicilio__c/Domicilio__c.object-meta.xml
<CustomObject>
    <label>Domicilio</label>
    <nameField>
        <displayFormat>DOM-{000000000}</displayFormat>
        <label>Nombre de Domicilio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Domicilios</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>