force-app/main/default/objects/Domicilio__c/fields/Codigo_postal__c.field-meta.xml
<CustomField>
    <fullName>Codigo_postal__c</fullName>
    <formula>Localidad__r.Codigo_Postal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Codigo postal</label>
    <type>Text</type>
</CustomField>