force-app/main/default/objects/Domicilio__c/fields/DOM_ID__c.field-meta.xml
<CustomField>
    <fullName>DOM_ID__c</fullName>
    <externalId>true</externalId>
    <label>DOM ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>