force-app/main/default/objects/Domicilio__c/fields/DPTO__c.field-meta.xml
<CustomField>
    <fullName>DPTO__c</fullName>
    <label>DPTO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>