force-app/main/default/objects/Domicilio__c/fields/Localidad__c.field-meta.xml
<CustomField>
    <fullName>Localidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Localidad</label>
    <referenceTo>Localidad__c</referenceTo>
    <relationshipLabel>Domicilios</relationshipLabel>
    <relationshipName>Domicilios</relationshipName>
    <type>Lookup</type>
</CustomField>