force-app/main/default/objects/Domicilio__c/fields/Nombre_localidad__c.field-meta.xml
<CustomField>
    <fullName>Nombre_localidad__c</fullName>
    <formula>Localidad__r.Nombre_de_Localidad__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre localidad</label>
    <type>Text</type>
</CustomField>