force-app/main/default/objects/Domicilio__c/fields/Numero__c.field-meta.xml
<CustomField>
    <fullName>Numero__c</fullName>
    <label>Numero</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>