force-app/main/default/objects/Domicilio__c/fields/Provincia_de_la_Localidad__c.field-meta.xml
<CustomField>
    <fullName>Provincia_de_la_Localidad__c</fullName>
    <description>Nombre la Provincia correspondiente a la Localidad del Domicilio Jira DES 6464</description>
    <formula>Localidad__r.Nombre_de_Provincia__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provincia de la Localidad</label>
    <type>Text</type>
</CustomField>