force-app/main/default/objects/Domicilio__c/fields/Tipo_de_domicilio__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_domicilio__c</fullName>
    <label>Tipo de domicilio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COM</fullName>
            </value>
            <value>
                <fullName>PART</fullName>
            </value>
            <value>
                <fullName>POST</fullName>
            </value>
            <value>
                <fullName>LEG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>